--- a/astro/src/content/blog/hackathons-all-the-time.mdx
+++ b/astro/src/content/blog/hackathons-all-the-time.mdx
@@ -27,7 +27,7 @@ groundbreaking, amazing stuff that you could only dream to make. And they are
 doing it with such ease.
 
 <figure className="pull-right">
-  ![Nerf Gun Turret](/img/hackathons/nerf-gun-turret.png)
+  ![Nerf Gun Turret](../../assets/img/hackathons/nerf-gun-turret.png)
   <figcaption>
     They fired this bad boy at judges. It was a sight to behold.
   </figcaption>
@@ -102,6 +102,6 @@ events, go to one. I'll probably be attending [Hack PSU](http://www.hackpsu.com/
 in a few weeks. Hopefully, I'll see you there.
 
 <figure className="center">
-  ![HacKSU at Penn Apps 2014](/img/hackathons/hacksu_at_penn_apps.jpg)
+  ![HacKSU at Penn Apps 2014](../../assets/img/hackathons/hacksu_at_penn_apps.jpg)
   <figcaption>HacKSU at Penn Apps 2014</figcaption>
 </figure>
