--- a/astro/src/content/blog/icymi-beauty-and-the-beat.mdx
+++ b/astro/src/content/blog/icymi-beauty-and-the-beat.mdx
@@ -14,7 +14,7 @@ leave your worries at door and enjoy yourself because it is about nothing and
 everything at the same time. These are trying times and escapism sometimes
 helps.
 
-![Edan - Beauty & The Beat](/img/icymi/beauty-and-the-beat.jpg)
+![Edan - Beauty & The Beat](../../assets/img/icymi/beauty-and-the-beat.jpg)
 
 > Does this mic sound blurry?
 
