--- a/astro/src/content/blog/icymi-moodymann.mdx
+++ b/astro/src/content/blog/icymi-moodymann.mdx
@@ -9,7 +9,7 @@ tags:
 ---
 export { components } from '../../components/Post/components.astro'
 
-![Moodymann - Moodymann](/img/icymi/moodymann.jpg)
+![Moodymann - Moodymann](../../assets/img/icymi/moodymann.jpg)
 
 This week, I want to take y'all to Detroit to visit [Moodymann's self titled album](://open.spotify.com/album/61sGO58ljdDgD4Mn6Bcj3P) from 2014. After 21 years of
 creating low key Detroit house music, James Dixon finally starts using his voice (literally, he doesn't sing on any
