--- a/astro/src/content/blog/icymi-the-monitor.mdx
+++ b/astro/src/content/blog/icymi-the-monitor.mdx
@@ -9,7 +9,7 @@ tags:
 ---
 export { components } from '../../components/Post/components.astro'
 
-![The Monitor](/img/icymi/the-monitor.jpg)
+![The Monitor](../../assets/img/icymi/the-monitor.jpg)
 
 To honor the inauguration today, I'm going to talk about one of my favorite punk
 albums of all time, [Titus Andronicus's _The Monitor_](https://open.spotify.com/album/5U09FQWagzAU5HPmufUAlU). This album is sort of
