--- a/astro/src/content/blog/job-search-2k22.mdx
+++ b/astro/src/content/blog/job-search-2k22.mdx
@@ -95,7 +95,7 @@ Never heard it put that way before, but product does be like that sometimes.
 
 # Enough about the search! Where are you working!?
 
-![Chord Commerce Logo](/img/job-search-2k22/chord-logo.jpg)
+![Chord Commerce Logo](../../assets/img/job-search-2k22/chord-logo.jpg)
 
 **I will be joining [Chord](https://chord.co) as a Staff Engineer in early February!**
 
