--- a/astro/src/content/blog/cooking-strawberry-pretzel-pie-spiked-cucumber-soup.mdx
+++ b/astro/src/content/blog/cooking-strawberry-pretzel-pie-spiked-cucumber-soup.mdx
@@ -23,19 +23,19 @@ I made this pie last year and it's the perfect summer pie. First I blended up a 
 Then I combined the pretzel with some half melted butter and sugar and lay it out in my cast iron pie pan. They say to
 use a stand mixer, but all I have are my 🙌 so they had to do. Bake it and let it cool in the fridge for a bit.
 
-![Making the crust in 3 steps](/img/cooking-strawberry-pie-cucumber-soup/making-the-crust.jpg)
+![Making the crust in 3 steps](../../assets/img/cooking-strawberry-pie-cucumber-soup/making-the-crust.jpg)
 
 It's time to make [cream](https://www.youtube.com/watch?v=PBwAxmrE194)! The recipe calls for a cup of confectioners
 sugar, but I used all that up making the crust, so I used granulated. This ended up working fine because it dissolves.
 I also used whipped cream cheese instead of plain which made it extra fluffy. Pull that crust out of fridge and pour the
 cream in and put it back in the fridge.
 
-![Cream in the crust](/img/cooking-strawberry-pie-cucumber-soup/cream-in-crust.jpeg)
+![Cream in the crust](../../assets/img/cooking-strawberry-pie-cucumber-soup/cream-in-crust.jpeg)
 
 After I got the cream in the pie crust, I took a little lunch break where I drank a Sunday Beer. I only bought this
 light beer because the can was designed by [The Young Jerks][the-young-jerks], who's designs I love.
 
-![Sunday Beer](/img/cooking-strawberry-pie-cucumber-soup/sunday-beer.jpeg)
+![Sunday Beer](../../assets/img/cooking-strawberry-pie-cucumber-soup/sunday-beer.jpeg)
 
 **Verdict:** A very enjoyable light beer. I love light beers and elevated takes on them. That said, I'd probably feel
 about the same as a Miller Lite on this day.
@@ -45,7 +45,7 @@ a bowl with some water and whisked it. The recipe says to use confectioners suga
 and this is close enough. Then I sliced the strawberries into quarters, put it the sugar water mixture and tossed before
 putting on the pie.
 
-![Finished pie](/img/cooking-strawberry-pie-cucumber-soup/finished-pie.jpeg)
+![Finished pie](../../assets/img/cooking-strawberry-pie-cucumber-soup/finished-pie.jpeg)
 
 **Verdict:** This ended up so much better than last year's version, which I made with a small disposable aluminum pie
 tin and the crust came out way too thick. It's like a fluffier and less rich cheesecake, perfect for the 90° day that it
@@ -53,25 +53,25 @@ was made on.
 
 # [Spiked Cucumber Soup][cucumber-soup]
 
-![I'm all green this summer](/img/cooking-strawberry-pie-cucumber-soup/me-green.jpeg)
+![I'm all green this summer](../../assets/img/cooking-strawberry-pie-cucumber-soup/me-green.jpeg)
 
 As you can tell, the color of my summer is green. I dyed my hair green, got a brand new Apple watch with a band to match
 my hair color, and have bought clothes to complement it as well. Now, I'm not just eating green, but if I can make
 a dish to match my theme, I'm going to do it. Enter [Spiked Cucumber Soup][cucumber-soup]. It's like a green juice, but
 with gin and it's actually a soup! Seemed super easy to make so I decided to give it a shot.
 
-![Soup ingredients](/img/cooking-strawberry-pie-cucumber-soup/soup-ingredients.jpeg)
+![Soup ingredients](../../assets/img/cooking-strawberry-pie-cucumber-soup/soup-ingredients.jpeg)
 
 My partner and I visited their parents in the Berkshires over Memorial Day weekend. On the last day there, we went to
 a liquor tasting at [Berkshire Mountain Distillers][bmd]. We ended up purchasing one of their Etheral Garden gins that
 had hints of horseradish because we keep it funky like that. Seemed like a great fit for this recipe.
 
-![Soup in blender](/img/cooking-strawberry-pie-cucumber-soup/soup-in-blender.jpeg)
+![Soup in blender](../../assets/img/cooking-strawberry-pie-cucumber-soup/soup-in-blender.jpeg)
 
 I tossed all the ingredients in a blender and ran it until smooth. It calls for a full cup of gin. As I was pouring the
 gin in the measuring cup I remarked "this is a lot of gin". That observation proved prescient.
 
-![Soup in a mason jar with a spoon](/img/cooking-strawberry-pie-cucumber-soup/soup-in-mason-jar.jpeg)
+![Soup in a mason jar with a spoon](../../assets/img/cooking-strawberry-pie-cucumber-soup/soup-in-mason-jar.jpeg)
 
 **Verdict:** This is a very weird cocktail. I think our gin was a little stronger than the one in the recipe or the
 recipe called for more cucumbers than we used. Either way, it was a little too strong BUT was still drinkable (by me, at
