--- a/astro/src/content/blog/icymi-live-in-concert-ep.mdx
+++ b/astro/src/content/blog/icymi-live-in-concert-ep.mdx
@@ -9,7 +9,7 @@ tags:
 ---
 export { components } from '../../components/Post/components.astro'
 
-![Wiz Khalifa & Curren$y - Live In Concert EP](/img/icymi/live-in-concert.jpg)
+![Wiz Khalifa & Curren$y - Live In Concert EP](../../assets/img/icymi/live-in-concert.jpg)
 
 This week, I'm gonna take us back to 2013. Happier times for sure. The album is
 [_Live in Concert EP_ from Wiz Khalifa and Curren$y][1]. Don't be mislead, this
