Set the cover image correctly

--- a/astro/src/content/blog/2021-website-redesign.mdx
+++ b/astro/src/content/blog/2021-website-redesign.mdx
@@ -1,7 +1,7 @@
 ---
 title: Can I Brag About This Site For A Second?
 description: I have put a lot of work into the newest version of this site and I want to tell you about it.
-cover: /img/website-update/home-page.png
+cover: ../../assets/img/website-update/home-page.png
 date: 2021-11-09T05:00
 tags:
   - code
