--- a/astro/src/content/blog/adhd.mdx
+++ b/astro/src/content/blog/adhd.mdx
@@ -2,7 +2,7 @@
 title: ADHD
 description: Let's quickly run through my life and see how ADHD has effected it.
 slug: adhd
-cover: /img/adhd/fight-thoughts.png
+cover: ../../assets/img/adhd/fight-thoughts.png
 date: 2021-10-19T05:00
 favoriteIndex: 2
 tags:
