--- a/astro/src/content/blog/google-page-speed-shield.mdx
+++ b/astro/src/content/blog/google-page-speed-shield.mdx
@@ -2,7 +2,7 @@
 title: 'Blogging My Failures: Google Page Speed Insights Shield'
 description: I wanted Google Page Speed Insights to work with GitHub badges, but latency stays undefeated.
 slug: google-page-speed-shield
-cover: /img/page-speed-shield/cover.png
+cover: ../../assets/img/page-speed-shield/cover.png
 date: 2021-06-21T05:00
 tags:
   - code
