--- a/astro/src/content/blog/hackathons-all-the-time.mdx
+++ b/astro/src/content/blog/hackathons-all-the-time.mdx
@@ -3,7 +3,7 @@ title: Hackathons All The Time
 date: 2014-02-22T05:00
 slug: hackathons-all-the-time
 description: My memories of hackathons I've been to thus far.
-cover: /img/hackathons/hacksu_at_penn_apps.jpg
+cover: ../../assets/img/hackathons/hacksu_at_penn_apps.jpg
 draft: false
 tags:
   - code
