--- a/astro/src/content/blog/hosting-gatsby-on-digitalocean-spaces.mdx
+++ b/astro/src/content/blog/hosting-gatsby-on-digitalocean-spaces.mdx
@@ -3,11 +3,10 @@ title: Hosting Gatsby on DigitalOcean Spaces
 description: You shouldn't use DigitalOcean Spaces to host a Gatsby site, but I had to do it to them for science.
 date: 2021-06-02T05:00
 slug: hosting-gatsby-on-digitalocean-spaces
-cover: /img/gatsby-digitialocean-spaces/grimace-cover.png
+cover: ../../assets/img/gatsby-digitialocean-spaces/grimace-cover.png
 tags:
   - code
 ---
-import { Tweet } from '@astro-community/astro-embed-twitter'
 export { components } from '../../components/Post/components.astro'
 
 ![Hosting Gatsby on DigitalOcean Spaces will make you grimmace](../../assets/img/gatsby-digitialocean-spaces/grimace-cover.png)
