--- a/astro/src/content/blog/icymi-moodymann.mdx
+++ b/astro/src/content/blog/icymi-moodymann.mdx
@@ -2,7 +2,7 @@
 title: 'ICYMI: Moodymann - Moodymann'
 date: 2016-12-02T05:00
 description: A catchy mix of Motown and house music.
-cover: /img/icymi/moodymann.jpg
+cover: ../../assets/img/icymi/moodymann.jpg
 slug: icymi-moodymann
 tags:
   - icymi
