--- a/astro/src/content/blog/job-search-2k22.mdx
+++ b/astro/src/content/blog/job-search-2k22.mdx
@@ -3,7 +3,7 @@ title: Job Search 2k22
 description: This was the most wild job search I've ever done
 slug: job-search-2k22
 date: 2022-01-28T05:00
-cover: /img/job-search-2k22/sankey-chart.png
+cover: ../../assets/img/job-search-2k22/sankey-chart.png
 tags:
   - code
 ---
