--- a/astro/src/content/blog/neovim-lua.mdx
+++ b/astro/src/content/blog/neovim-lua.mdx
@@ -1,7 +1,7 @@
 ---
 title: Friendship ended with Vimscript
 description: Lua is now my best friend for configuring Neovim.
-cover: /img/neovim-lua/friendship-ended-with-vimscript.png
+cover: ../../assets/img/neovim-lua/friendship-ended-with-vimscript.png
 date: 2023-02-21T04:00
 tags:
   - code
