--- a/astro/src/content/blog/what-i-learned-working-at-my-first-startup.mdx
+++ b/astro/src/content/blog/what-i-learned-working-at-my-first-startup.mdx
@@ -2,7 +2,7 @@
 title: What I Learned Working At My First Startup
 description: I spent 4 years working at Talent Inc, my first product & customer focused startup, and I learned so much.
 slug: what-i-learned-working-at-my-first-startup
-cover: /img/what-i-learned-working-at-talentinc/reading-on-couch.jpeg
+cover: ../../assets/img/what-i-learned-working-at-talentinc/reading-on-couch.jpeg
 date: 2021-12-17T05:00
 tags:
   - code
