--- a/astro/src/content/talks/remix-ab-testing.mdx
+++ b/astro/src/content/talks/remix-ab-testing.mdx
@@ -3,7 +3,7 @@ title: Remixing A/B Tests
 date: 2023-04-12T04:00
 description: I love Remix, A/B testing & GrowthBook!
 location: Remix NYC
-cover: /img/remix-ab-testing/cover.png
+cover: ../../assets/img/remix-ab-testing/cover.png
 ---
 import { YouTube } from '@astro-community/astro-embed-youtube'
 export { components } from '../../components/Post/components.astro'
