--- a/astro/src/content/blog/cooking-cherry-slab-pie-hot-sauce-shrimp-cheesy-polenta.mdx
+++ b/astro/src/content/blog/cooking-cherry-slab-pie-hot-sauce-shrimp-cheesy-polenta.mdx
@@ -3,7 +3,7 @@ title: '👨‍🍳 Cherry Slab Pie & Hot Sauce Shrimp + Cheesy Polenta'
 description: The highlight of my weekend was making this pie, let me tell you all about it!
 date: 2021-06-28T04:00
 slug: cooking-cherry-slab-pie-hot-sauce-shrimp-cheesy-polenta
-cover: /img/cooking-cherry-slab-pie/pie-slice.jpeg
+cover: ../../assets/img/cooking-cherry-slab-pie/pie-slice.jpeg
 tags:
   - cooking
 ---
