--- a/astro/src/content/blog/icymi-beauty-and-the-beat.mdx
+++ b/astro/src/content/blog/icymi-beauty-and-the-beat.mdx
@@ -2,7 +2,7 @@
 title: 'ICYMI: Edan - Beauty & The Beat'
 date: 2017-01-27T05:00
 description: Underground rap record that will rock you.
-cover: /img/icymi/beauty-and-the-beat.jpg
+cover: ../../assets/img/icymi/beauty-and-the-beat.jpg
 slug: icymi-beauty-and-the-beat
 tags:
   - icymi
