--- a/astro/src/content/blog/icymi-quarantine.mdx
+++ b/astro/src/content/blog/icymi-quarantine.mdx
@@ -2,7 +2,7 @@
 title: 'ICYMI: Laurel Halo - Quarantine'
 date: 2016-12-09T05:00
 description: A beautiful ambient album about the pain of a breakup.
-cover: /img/icymi/quarantine.jpg
+cover: ../../assets/img/icymi/quarantine.jpg
 slug: icymi-quarantine
 tags:
   - icymi
