--- a/astro/src/content/blog/icymi-the-monitor.mdx
+++ b/astro/src/content/blog/icymi-the-monitor.mdx
@@ -2,7 +2,7 @@
 title: 'ICYMI: Titus Andronicus - The Monitor'
 date: 2017-01-20T05:00
 description: Epic punk album about anxiety and fighting the man.
-cover: /img/icymi/the-monitor.jpg
+cover: ../../assets/img/icymi/the-monitor.jpg
 slug: icymi-the-monitor
 tags:
   - icymi
