--- a/src/content/resumeExperiences/chord.mdx
+++ b/src/content/resumeExperiences/chord.mdx
@@ -11,7 +11,14 @@ startDate: 2022-02-07T05:00
 ---
 export { experienceComponents as components } from '../../components/Resume/mdxComponents.tsx'
 
-* Contributed to the development of a [React SDK](https://docs.chord.co/chord-ui/module-react-autonomy) and provided technical support to customers and agency partners, enabling them to integrate our platform seamlessly and achieve their goals efficiently.
-* Led technical documentation efforts in improving REST API documentation, generating automated documentation for the SDK using [Typedoc](https://typedoc.org/), and development of other platform documentation.
-* Launched the 2nd most profitable customer using a data-only integration of our platform.
-* Maintained and improved [Next.js](https://nextjs.org/) and [Gatsby](https://www.gatsbyjs.com/) starter projects, ensuring a smooth onboarding experience for developers. This involved updating dependencies, implementing new features, and resolving community-reported issues.
+* Led planning and contributed heavily to client launches of our e-commerce platform.
+* Contributed to the development of a [React SDK](https://docs.chord.co/chord-ui/module-react-autonomy)
+  and provided technical support to customers and agency partners, enabling them
+  to integrate our platform seamlessly and achieve their goals efficiently.
+* Overhauled technical documentation efforts including that of a public REST API,
+  generating automated documentation a Typescript SDK using [Typedoc](https://typedoc.org/),
+  and development of other platform documentation.
+* Maintained and improved [Next.js](https://nextjs.org/) and
+  [Gatsby](https://www.gatsbyjs.com/) starter projects, ensuring a smooth
+  onboarding experience for developers. This involved updating dependencies,
+  implementing new features, and resolving community-reported issues.
