--- a/src/content/resumeExperiences/talent-inc.mdx
+++ b/src/content/resumeExperiences/talent-inc.mdx
@@ -12,15 +12,15 @@ endDate: 2021-12-17T05:00
 ---
 export { experienceComponents as components } from '../../components/Resume/mdxComponents.tsx'
 
-* Tech lead for [ZipJob](https://www.zipjob.com) transitioning
+* Tech lead of two engineers for [ZipJob](https://www.zipjob.com) transitioning
   to a statically compiled [Gatsby](https://www.gatsbyjs.com/)/[React](https://reactjs.org/)
   site backed by [Contentful CMS](https://www.contentful.com/), increasing the
   [Lighthouse](https://developers.google.com/web/tools/lighthouse)
   score 55 points & enabling our marketing team to control all copy on the website.
-* Frontend tech lead for a Customer Portal, using [TypeScript](https://www.typescriptlang.org/), [React](https://reactjs.org/) & [Go](https://golang.org/)
+* Frontend tech lead of three engineers for a Customer Portal, using [TypeScript](https://www.typescriptlang.org/), [React](https://reactjs.org/) & [Go](https://golang.org/)
   that raised <a href="https://en.wikipedia.org/wiki/Net_promoter_score"><abbr title="Net Promoter Score">NPS</abbr></a>
   25 points & average customer revenue by $8 per order.
-* Frontend tech lead for our rewritten Expert Hub, using <a href="https://www.typescriptlang.org/">TypeScript</a>, <a href="https://reactjs.org/">React</a> & <a href="https://golang.org/">Go</a>
+* Frontend tech lead of three engineers for a rewritten order management system, using <a href="https://www.typescriptlang.org/">TypeScript</a>, <a href="https://reactjs.org/">React</a> & <a href="https://golang.org/">Go</a>
   that decreased our average time to order completion by 12 hours.
 * Tech lead for a dynamic payment & order offering system for contractors
   which decreased our average cost to fulfill an order by $10 & increased
