Update the ol' resume

--- a/src/content/resumeExperiences/go-media.mdx
+++ b/src/content/resumeExperiences/go-media.mdx
@@ -9,6 +9,7 @@ location:
   country: US
 startDate: 2011-05-01T05:00
 endDate: 2012-06-01T05:00
+printHide: true
 ---
 
 export { experienceComponents as components } from '../../components/Resume/mdxComponents.tsx'
