--- a/src/content/resumeExperiences/search-party.mdx
+++ b/src/content/resumeExperiences/search-party.mdx
@@ -11,4 +11,6 @@ startDate: 2024-01-02T05:00
 ---
 export { experienceComponents as components } from '../../components/Resume/mdxComponents.tsx'
 
-TBA!
+* Lead engineer for an early-stage startup building job search tools for hourly workers, using [Next.js](https://nextjs.org/), [TypeScript](https://www.typescriptlang.org/), and [PostgreSQL](https://www.postgresql.org/) to create a performant and type-safe application.
+* Spearheaded all product experimentation initiatives using [Statsig](https://www.statsig.com/), implementing A/B testing and feature flags to drive data-informed product decisions.
+* Mentored and accelerated the growth of a junior engineer through pair programming, code reviews, and architecture discussions, establishing engineering best practices for the team.
