--- a/src/content/sections/resume-skills.mdx
+++ b/src/content/sections/resume-skills.mdx
@@ -6,28 +6,26 @@ export { skillsComponents as components } from '../../components/Resume/mdxCompo
 * Fluent in
   [TypeScript](https://www.typescriptlang.org/),
   [JavaScript](https://en.wikipedia.org/wiki/JavaScript),
+  [Python](https://www.python.org/),
   [Go](https://golang.org/),
   [PHP](https://www.php.net/),
   [SQL](https://en.wikipedia.org/wiki/SQL),
-  [Python](https://www.python.org/),
   [HTML](https://en.wikipedia.org/wiki/HTML5),
   and [CSS](https://www.w3.org/Style/CSS/Overview.en.html).
 * Built complex web applications using
   [React](https://reactjs.org/),
   [Next.js](https://nextjs.org/),
-  [Gatsby](https://www.gatsbyjs.org/),
   [Remix](https://remix.run/),
   [Flask](https://www.palletsprojects.com/p/flask/),
   [Django](https://www.djangoproject.com/),
   [Gin](https://gin-gonic.com/),
   and [WordPress](https://wordpress.org/).
 * Loves using
+  [OpenAI](https://openai.com),
   [AWS](https://aws.amazon.com/),
   [Astro](https://astro.build/),
   [GitHub Actions](https://github.com/features/actions),
-  [Git](https://git-scm.com/),
   [Linux](https://en.wikipedia.org/wiki/Linux),
-  [Serverless](https://serverless.com/),
   [SQLite](https://sqlite.org/index.html),
   [Tailwind CSS](https://tailwindcss.com/),
   and [Vim](https://www.vim.org/).
@@ -37,14 +35,7 @@ export { skillsComponents as components } from '../../components/Resume/mdxCompo
   [Docker](https://www.docker.com/),
   [Google Tag Manager](https://tagmanager.google.com/),
   [Jenkins](https://jenkins.io/),
-  [jQuery](https://jquery.com/),
   [Okta](https://www.okta.com/),
   [MySQL](https://www.mysql.com/),
-  [SaltStack](https://www.saltstack.com/),
   and [SQLAlchemy](https://www.sqlalchemy.org/).
-* Currently preoccupied with
-  [ChatGPT](https://openai.com/blog/chatgpt),
-  [React Server Components](https://nextjs.org/docs/getting-started/react-essentials),
-  [product management](https://en.wikipedia.org/wiki/Product_management),
-  and <a href="https://www.a11yproject.com/"><abbr title="Accessiblity">a11y</abbr></a>.
 
