--- a/src/content/resumeExperiences/chord.mdx
+++ b/src/content/resumeExperiences/chord.mdx
@@ -12,14 +12,6 @@ endDate: 2023-11-27T04:00
 ---
 export { experienceComponents as components } from '../../components/Resume/mdxComponents.tsx'
 
-* Led planning and contributed heavily to client launches of our e-commerce platform.
-* Contributed to the development of a [React SDK](https://docs.chord.co/chord-ui/module-react-autonomy)
-  and provided technical support to customers and agency partners, enabling them
-  to integrate our platform seamlessly and achieve their goals efficiently.
-* Overhauled technical documentation efforts including that of a public REST API,
-  generating automated documentation a Typescript SDK using [Typedoc](https://typedoc.org/),
-  and development of other platform documentation.
-* Maintained and improved [Next.js](https://nextjs.org/) and
-  [Gatsby](https://www.gatsbyjs.com/) starter projects, ensuring a smooth
-  onboarding experience for developers. This involved updating dependencies,
-  implementing new features, and resolving community-reported issues.
+* Led successful client launches of an e-commerce platform while developing a [React SDK](https://docs.chord.co/chord-ui/module-react-autonomy), providing technical guidance to customers and agency partners to ensure seamless platform integration.
+* Spearheaded documentation initiatives including a public REST API and automated SDK documentation using [Typedoc](https://typedoc.org/), significantly improving platform accessibility and developer experience.
+* Maintained and enhanced [Next.js](https://nextjs.org/) and [Gatsby](https://www.gatsbyjs.com/) starter projects through regular dependency updates, feature implementations, and community issue resolution, streamlining the developer onboarding process.
