--- a/src/content/blog/funny-money.mdx
+++ b/src/content/blog/funny-money.mdx
@@ -7,6 +7,7 @@ favoriteIndex: 1
 tags:
   - code
 ---
+
 This is a post about cryptocurrency, but first, let me tell you a tale.
 
 I graduated high school in 2009, right into the Great Recession. All the money that my parents' saved for my college
@@ -153,12 +154,12 @@ money, they are allowed to gamble as they see fit, right?
 
 - Crypto is perfect for collecting payment in ransomware attacks against [hospitals][hospital-ransomware] and
   [municipal governments][baltimore-ransomware]. [You can track the rise of these attacks against the prevalence of crypto][npr-ransomware].
-- <abbr title="Non Fungible Tokens">NFTs</abbr> replicate the worst elements of the
-  art world being a tax haven EXCEPT it's far easier to commit fraud. You mint an
-  NFT for $1k, sell it to yourself for $2k using another wallet, flip it to yourself
-  a couple of more times til you can sell it to a mark for $8k, clearing $7k. It
-  should also be noted that NFTs are ugly as shit and a capitalist's vision of what
-  art is.
+- <abbr title="Non Fungible Tokens">NFTs</abbr> replicate the worst elements of
+  the art world being a tax haven EXCEPT it's far easier to commit fraud. You
+  mint an NFT for $1k, sell it to yourself for $2k using another wallet, flip it
+  to yourself a couple of more times til you can sell it to a mark for $8k,
+  clearing $7k. It should also be noted that NFTs are ugly as shit and a
+  capitalist's vision of what art is.
 - Rug pulling/pumping and dumping is a concept that all crypto bros have accepted as a part of life.
   You launch a coin or NFT or <abbr title="Decentralized Autonomous Organization">DAO</abbr>, raise a bunch of funds by
   getting influencers post about it on their story and then take off with the money and disappear.
