--- a/src/content/resumeExperiences/chord.mdx
+++ b/src/content/resumeExperiences/chord.mdx
@@ -10,6 +10,7 @@ location:
 startDate: 2022-02-07T05:00
 endDate: 2023-11-27T04:00
 ---
-* Led successful client launches of an e-commerce platform while developing a [React SDK](https://docs.chord.co/chord-ui/module-react-autonomy), providing technical guidance to customers and agency partners to ensure seamless platform integration.
-* Spearheaded documentation initiatives including a public REST API and automated SDK documentation using [Typedoc](https://typedoc.org/), significantly improving platform accessibility and developer experience.
-* Maintained and enhanced [Next.js](https://nextjs.org/) and [Gatsby](https://www.gatsbyjs.com/) starter projects through regular dependency updates, feature implementations, and community issue resolution, streamlining the developer onboarding process.
+
+- Led successful client launches of an e-commerce platform while developing a [React SDK](https://docs.chord.co/chord-ui/module-react-autonomy), providing technical guidance to customers and agency partners to ensure seamless platform integration.
+- Spearheaded documentation initiatives including a public REST API and automated SDK documentation using [Typedoc](https://typedoc.org/), significantly improving platform accessibility and developer experience.
+- Maintained and enhanced [Next.js](https://nextjs.org/) and [Gatsby](https://www.gatsbyjs.com/) starter projects through regular dependency updates, feature implementations, and community issue resolution, streamlining the developer onboarding process.
