--- a/src/content/resumeExperiences/croscon.mdx
+++ b/src/content/resumeExperiences/croscon.mdx
@@ -10,10 +10,11 @@ location:
 startDate: 2015-04-01T05:00
 endDate: 2017-10-26T05:00
 ---
-* Instilled a culture of <a href="https://en.wikipedia.org/wiki/Software_testing">software testing</a>
+
+- Instilled a culture of <a href="https://en.wikipedia.org/wiki/Software_testing">software testing</a>
   into a consulting company that previously had none, reducing the amount of time
   spent testing regressions manually across the company.
-* Developed large portions of <a href="http://www.webershandwick.com/">Weber Shandwick's</a>
+- Developed large portions of <a href="http://www.webershandwick.com/">Weber Shandwick's</a>
   MobileCommand, a public relations crisis management web application, and <a href="https://www.gemsafe.com">GemSafe</a>, an
   insurance platform, using <a href="https://www.python.org/">Python</a>
   and <a href="http://flask.pocoo.org/">Flask</a>.
