--- a/src/content/sections/resume-skills.mdx
+++ b/src/content/sections/resume-skills.mdx
@@ -1,7 +1,8 @@
 ---
 page: resume
 ---
-* Fluent in
+
+- Fluent in
   [TypeScript](https://www.typescriptlang.org/),
   [JavaScript](https://en.wikipedia.org/wiki/JavaScript),
   [Python](https://www.python.org/),
@@ -10,7 +11,7 @@ page: resume
   [SQL](https://en.wikipedia.org/wiki/SQL),
   [HTML](https://en.wikipedia.org/wiki/HTML5),
   and [CSS](https://www.w3.org/Style/CSS/Overview.en.html).
-* Built complex web applications using
+- Built complex web applications using
   [React](https://reactjs.org/),
   [Next.js](https://nextjs.org/),
   [Remix](https://remix.run/),
@@ -18,7 +19,7 @@ page: resume
   [Django](https://www.djangoproject.com/),
   [Gin](https://gin-gonic.com/),
   and [WordPress](https://wordpress.org/).
-* Loves using
+- Loves using
   [OpenAI](https://openai.com),
   [AWS](https://aws.amazon.com/),
   [Astro](https://astro.build/),
@@ -27,7 +28,7 @@ page: resume
   [SQLite](https://sqlite.org/index.html),
   [Tailwind CSS](https://tailwindcss.com/),
   and [Vim](https://www.vim.org/).
-* Has a love-hate relationship (that I will happily defend) with
+- Has a love-hate relationship (that I will happily defend) with
   [Ansible](https://www.ansible.com/),
   [Cypress](https://www.cypress.io/),
   [Docker](https://www.docker.com/),
@@ -36,4 +37,3 @@ page: resume
   [Okta](https://www.okta.com/),
   [MySQL](https://www.mysql.com/),
   and [SQLAlchemy](https://www.sqlalchemy.org/).
-
