--- a/src/content/blog/2021-website-redesign.mdx
+++ b/src/content/blog/2021-website-redesign.mdx
@@ -6,6 +6,7 @@ date: 2021-11-09T05:00
 tags:
   - code
 ---
+
 ![Home page screenshot](../../assets/img/website-update/home-page.png)
 
 In the age of social media and hosted blogs, personal websites don't get the love they deserve. Sure, writing developer
@@ -246,9 +247,11 @@ really show off my personality. It took me a few weeks and some endless scrollin
       <br />A kinda different approach for responsive design...
       <br />
       <br />
-      Inspired by <a href="https://twitter.com/chriscoyier?ref_src=twsrc%5Etfw">
+      Inspired by{' '}
+      <a href="https://twitter.com/chriscoyier?ref_src=twsrc%5Etfw">
         @chriscoyier
-      </a> &#39;s generative grids pen 💛
+      </a>{' '}
+      &#39;s generative grids pen 💛
       <br />
       <br />
       CodePen (Desktop only + Chrome / Edge)
