--- a/src/content/blog/adhd.mdx
+++ b/src/content/blog/adhd.mdx
@@ -8,6 +8,7 @@ favoriteIndex: 2
 tags:
   - mental-health
 ---
+
 > I talk about suicide and depression in this post.
 
 # 1. The Beginning
@@ -64,7 +65,8 @@ both. And this cycle repeats itself for 5 years! I was constantly employed that 
 money to survive, and flunking classes.
 
 <figure className="center">
-  ![Eli in 2011 with Aaron Draplin and some of my fellow interns](../../assets/img/adhd/2011-06-10-21.22.12.jpg)
+  ![Eli in 2011 with Aaron Draplin and some of my fellow
+  interns](../../assets/img/adhd/2011-06-10-21.22.12.jpg)
   <figcaption>
     Me in 2011 at one of my internships. I got to meet
     <a href="https://twitter.com/Draplin">Aaron Draplin</a> and work with some
