--- a/src/content/blog/hackathons-all-the-time.mdx
+++ b/src/content/blog/hackathons-all-the-time.mdx
@@ -8,6 +8,7 @@ draft: false
 tags:
   - code
 ---
+
 Over the past two years, I've been to quite a few hackathons
 ([MHacks](http://www.mhacks.org/), [Penn Apps](http://2014s.pennapps.com/),
 [Kent Hack Enough](http://hacksu.cs.kent.edu/khe2013/) to name a few) and
@@ -100,6 +101,7 @@ events, go to one. I'll probably be attending [Hack PSU](http://www.hackpsu.com/
 in a few weeks. Hopefully, I'll see you there.
 
 <figure className="center">
-  ![HacKSU at Penn Apps 2014](../../assets/img/hackathons/hacksu_at_penn_apps.jpg)
+  ![HacKSU at Penn Apps
+  2014](../../assets/img/hackathons/hacksu_at_penn_apps.jpg)
   <figcaption>HacKSU at Penn Apps 2014</figcaption>
 </figure>
