--- a/src/content/resumeExperiences/davey-tree.mdx
+++ b/src/content/resumeExperiences/davey-tree.mdx
@@ -10,8 +10,10 @@ location:
 startDate: 2014-12-01T05:00
 endDate: 2015-03-31T05:00
 ---
+
 Architected <a href="https://landscape.itreetools.org">iTree Landscape</a>
 using <a href="https://www.djangoproject.com">Django</a> and
-<a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a>, which
-uses satellite images and various data sources to determine where trees
-should be planted.
+
+<a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a>, which uses
+satellite images and various data sources to determine where trees should be
+planted.
