--- a/src/content/resumeExperiences/great-lakes-publishing.mdx
+++ b/src/content/resumeExperiences/great-lakes-publishing.mdx
@@ -10,8 +10,9 @@ location:
 startDate: 2010-09-01T05:00
 endDate: 2011-05-01T05:00
 ---
-* Updated content for <a href="http://www.clevelandmagazine.com"> Cleveland Magazine</a>,
+
+- Updated content for <a href="http://www.clevelandmagazine.com"> Cleveland Magazine</a>,
   <a href="http://www.ohiomagazine.com">Ohio Magazine</a>, and other
   <a href="http://glpublishing.com">Great Lakes Publishing</a> entities.
-* Implemented websites for <a href="http://www.guesthouseclevelandclinic.com/CCGH/ClevelandClinicGuesthouse.aspx">Cleveland Clinic Guesthouse</a>
+- Implemented websites for <a href="http://www.guesthouseclevelandclinic.com/CCGH/ClevelandClinicGuesthouse.aspx">Cleveland Clinic Guesthouse</a>
   and <a href="http://www.intercontinentalsuitescleveland.com/ISC/InterContinentalSuitesCleveland.aspx">InterContinental Suites Cleveland</a>.
