--- a/src/content/sections/do-you-code.mdx
+++ b/src/content/sections/do-you-code.mdx
@@ -1,6 +1,7 @@
 ---
 page: home
 ---
+
 import GithubCalendar from '../../components/GithubCalendar.astro'
 import { FaGithub } from 'react-icons/fa'
 
@@ -11,7 +12,10 @@ My life is all about making web applications. I am _the_ generalist you have in 
 Let me at it. Need a thoughtfully designed API? I can do that in my sleep. CSS needs some tweaking? As long as I don't
 need to design it, I'll make it look great.
 
-<a href="https://github.com/eligundry" class:list={['btn', 'btn-primary', 'btn-md', 'not-prose', 'mt-6', 'sm:mt-0']}>
+<a
+  href="https://github.com/eligundry"
+  class:list={['btn', 'btn-primary', 'btn-md', 'not-prose', 'mt-6', 'sm:mt-0']}
+>
   <FaGithub class="inline mr-2 h-6 w-6" />
   Review my code on GitHub!
 </a>
@@ -19,7 +23,7 @@ need to design it, I'll make it look great.
 <figure class="mt-3">
   <GithubCalendar className="my-0" />
   <figcaption class="[&>*]:m-0 mt-0 hidden sm:block">
-    GitHub contribution calendars are not a good indicator of whether or not someone is a good developer, but they are very
-    pretty.
+    GitHub contribution calendars are not a good indicator of whether or not
+    someone is a good developer, but they are very pretty.
   </figcaption>
 </figure>
