--- a/src/content/sections/resume-activities.mdx
+++ b/src/content/sections/resume-activities.mdx
@@ -1,16 +1,17 @@
 ---
 page: resume
 ---
-* Created [Album Mode.party](https://album-mode.party), a
+
+- Created [Album Mode.party](https://album-mode.party), a
   [Remix](https://remix.run/) application that recommends random
   albums from Spotify.
-* Volunteered with [Code Nation](https://codenation.org/) to teach
+- Volunteered with [Code Nation](https://codenation.org/) to teach
   web development to 10th graders during the 2022 school year.
-* Presented [technical talks](/talks) at
+- Presented [technical talks](/talks) at
   [Remix NYC](/talks/remix-ab-testing),
   [QueensJS](/talks/redux-hooks),
   and [The New York City Vim Meetup](/talks/dots).
-* Alumni of [HacKSU](http://hacksu.cs.kent.edu/), Kent State's hacker community and
+- Alumni of [HacKSU](http://hacksu.cs.kent.edu/), Kent State's hacker community and
   [competed in numerous hackathons](https://devpost.com/eligundry) including:
   <ul class="columns-2 text-sm print:text-xs">
     <li>[KHE](https://khe.io/) 2013 (2nd place), 2014, 2015</li>
@@ -18,4 +19,4 @@ page: resume
     <li>[PennApps](http://pennapps.com/) 2014 (1st place Intel XDK App)</li>
     <li>[HackIllinois](http://hackillinois.org/) 2014</li>
   </ul>
-* Earned the rank of <a href="https://en.wikipedia.org/wiki/Eagle_Scout" itemprop="award">Eagle Scout</a> in 2006.
+- Earned the rank of <a href="https://en.wikipedia.org/wiki/Eagle_Scout" itemprop="award">Eagle Scout</a> in 2006.
