--- a/src/content/talks/remix-ab-testing.mdx
+++ b/src/content/talks/remix-ab-testing.mdx
@@ -5,6 +5,7 @@ description: I love Remix, A/B testing & GrowthBook!
 location: Remix NYC
 cover: ../../assets/img/remix-ab-testing/cover.png
 ---
+
 import { YouTube } from '@astro-community/astro-embed-youtube'
 
 ## Video
@@ -22,7 +23,7 @@ import { YouTube } from '@astro-community/astro-embed-youtube'
 
 ## Resources
 
-* [Integrating GrowthBook in to album-mode.party](https://github.com/eligundry/album-mode/pull/59)
-* [GrowthBook](https://growthbook.io/)
-* [GrowthBook A/B testing best practices whitepaper](https://www.growthbook.io/ab-testing-best-practices)
-* [Neil Patel on A/B testing for non-math people](https://neilpatel.com/blog/how-ab-testing-works/)
+- [Integrating GrowthBook in to album-mode.party](https://github.com/eligundry/album-mode/pull/59)
+- [GrowthBook](https://growthbook.io/)
+- [GrowthBook A/B testing best practices whitepaper](https://www.growthbook.io/ab-testing-best-practices)
+- [Neil Patel on A/B testing for non-math people](https://neilpatel.com/blog/how-ab-testing-works/)
