fix: styling drift in daisyUI versions

--- a/src/content/sections/about.mdx
+++ b/src/content/sections/about.mdx
@@ -4,21 +4,4 @@ page: home
 
 import EmojiText from '../../components/EmojiText.astro'
 
-Eli Gundry is a full stack web developer that loves JavaScript, devops and web standards. When he isn't coding, he's
-
-<EmojiText emoji="👨‍🍳" label="chef cause I'm cooking">
-  [cooking up something mean in the kitchen](/blog/#cooking)
-</EmojiText>
-,
-<EmojiText emoji="🎾" label="tennis ball because that's what I'm playing">
-  playing tennis
-</EmojiText>
-or
-<EmojiText emoji="🐈🐈‍⬛" label="it's my cats!">
-  annoying his cats
-</EmojiText>
-. He is also a
-<EmojiText emoji="✳️" label="green asterisk emoji for that pure html energy">
-  [web0 evanglist](/web0.html)
-</EmojiText>
-and thinks everyone can benefit from writing some HTML.
+Eli Gundry is a full stack web developer that loves JavaScript, devops and web standards. When he isn't coding, he's <EmojiText emoji="👨‍🍳" label="chef cause I'm cooking">[cooking up something mean in the kitchen](/blog/#cooking)</EmojiText>, <EmojiText emoji="🎾" label="tennis ball because that's what I'm playing">playing tennis</EmojiText> or <EmojiText emoji="🐈🐈‍⬛" label="it's my cats!">annoying his cats</EmojiText>. He is also a <EmojiText emoji="✳️" label="green asterisk emoji for that pure html energy">[web0 evanglist](/web0.html)</EmojiText> and thinks everyone can benefit from writing some HTML.
