fix: handle some markdown breakages

--- a/src/content/resumeExperiences/mindbox.mdx
+++ b/src/content/resumeExperiences/mindbox.mdx
@@ -12,12 +12,6 @@ endDate: 2013-01-01T05:00
 printHide: true
 ---
 
-- Used <a href="http://php.net">PHP</a> with the
-  <a href="http://www.yiiframework.com">Yii Framework</a>
-  to develop web applications and
-  <a href="https://en.wikipedia.org/wiki/Representational_state_transfer">
-    RESTful APIs
-  </a>
-  .
+- Used <a href="http://php.net">PHP</a> with the <a href="http://www.yiiframework.com">Yii Framework</a> to develop web applications and <a href="https://en.wikipedia.org/wiki/Representational_state_transfer">RESTful APIs</a>.
 - Worked in a remote environment using agile development practices
   using <a href="http://www.redmine.org">RedMine</a>.
