--- a/src/content/resumeExperiences/wayne-county-schools-career-center.mdx
+++ b/src/content/resumeExperiences/wayne-county-schools-career-center.mdx
@@ -11,15 +11,4 @@ startDate: 2007-08-01T05:00
 endDate: 2009-05-01T05:00
 ---
 
-High school vocational program where I learned the basics of
-
-<a href="https://en.wikipedia.org/wiki/HTML5">HTML</a>,
-<a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets">CSS</a>,
-<a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a>,
-<a href="https://php.net/">PHP</a>,<a href="http://wordpress.org/">WordPress</a>
-,<a href="https://en.wikipedia.org/wiki/Adobe_Photoshop">Photoshop</a>,
-<a href="https://en.wikipedia.org/wiki/Adobe_Illustrator">Illustrator</a>,
-<a href="https://en.wikipedia.org/wiki/Adobe_Premiere_Pro">Premiere Pro</a>
-&amp;
-<a href="https://en.wikipedia.org/wiki/Adobe_Flash">Flash</a>. Using these
-skills, I created websites used by classes and external clients.
+High school vocational program where I learned the basics of <a href="https://en.wikipedia.org/wiki/HTML5">HTML</a>, <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets">CSS</a>, <a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a>, <a href="https://php.net/">PHP</a>,<a href="http://wordpress.org/">WordPress</a>, <a href="https://en.wikipedia.org/wiki/Adobe_Photoshop">Photoshop</a>, <a href="https://en.wikipedia.org/wiki/Adobe_Illustrator">Illustrator</a>, <a href="https://en.wikipedia.org/wiki/Adobe_Premiere_Pro">Premiere Pro</a> &amp; <a href="https://en.wikipedia.org/wiki/Adobe_Flash">Flash</a>. Using these skills, I created websites used by classes and external clients.
