--- a/src/content/sections/do-you-code.mdx
+++ b/src/content/sections/do-you-code.mdx
@@ -21,7 +21,7 @@ need to design it, I'll make it look great.
 </a>
 
 <figure class="mt-3">
-  <GithubCalendar className="my-0" />
+  <GithubCalendar className="my-0" server:defer />
   <figcaption class="[&>*]:m-0 mt-0 hidden sm:block">
     GitHub contribution calendars are not a good indicator of whether or not
     someone is a good developer, but they are very pretty.
